# cookiecutter-pypackage-mkdocss

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.github_repo}}/: Pipfile  README.md  mkdocs.yml  setup.cfg  test.sh
{{cookiecutter.github_repo}}/src/{{cookiecutter.package_name}}/: __init__.py  {{cookiecutter.package_name}}.py
{{cookiecutter.github_repo}}/tests/{{cookiecutter.package_name}}/: test_{{cookiecutter.package_name}}.py
