[metadata]
name = {{cookiecutter.package_name}}
version = {{cookiecutter.version}}
author = {{cookiecutter.pip_author}}
author_email = {{cookiecutter.pip_author_email}}
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://{{cookiecutter.github_account}}.github.io/{{cookiecutter.github_repo}}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_account}}/{{cookiecutter.github_repo}}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    {{cookiecutter.package_name}}-ping = {{cookiecutter.package_name}}:ping
